# vivarium

./: .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  .zenodo.json  =0.6  AGENTS.md  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Jenkinsfile  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  TEST_PIPE  config.cfg  engine.py  new_state_machine.py  profile_conda_env.py  profile_conda_env.sh  pyproject.toml  python_versions.json  pytype.cfg  requirements-dev.txt  requirements.txt  setup.py  simulate  test_full_history_observer.ipynb  test_util.py  tox.ini  util.py  vivarium.code-workspace
.github/: CODEOWNERS  install_dependency_branch.sh  pull_request_template.md
.github/workflows/: build.yml  deploy.yml  schedule_build.yml
ceam/: .engine.py.swn  .engine.py.swo  __init__.py  airflow.py  analysis.py  config.cfg  config_tree.py  engine.py  events.py  interpolation.py  intervention.py  state_machine.py  test_util.py  tree.py  util.py
ceam/components/: __init__.py  base_population.py  blood_pressure.py  disease_models.py  example.py  fertility.py  healthcare_access.py  hello_world.py  inspector.py  level3intervention.py  metrics.py  opportunistic_screening.py  sample_history.py  smoking.py  state_test.py
ceam/framework/: celery_tasks.py  components.py  disease.py  engine.py  event.py  lookup.py  population.py  randomness.py  state_machine.py  state_machine2.py  util.py  values.py
ceam/modules/: __init__.py  blood_pressure.py  chronic_condition.py  disease.py  disease_models.py  gbd_ms_functions.py  healthcare_access.py  hemorrhagic_stroke.py  ihd.py  intervention.py  level3intervention.py  level3intervention_scalarized.py  metrics.py  opportunistic_screening.py  sample_history.py  smoking.py
ceam_tests/: bamboo_test_runner.sh  conftest.py  test_events.py  test_interpolation.py  test_state_machine.py  test_tree.py  test_util.py  util.py
ceam_tests/components/: test_blood_pressure.py  test_disease.py  test_healthcare_access_module.py  test_opportunistic_screening.py  test_smoking.py
ceam_tests/framework/: test_components.py  test_disease.py  test_event.py  test_lookup.py  test_population.py  test_randomness.py  test_state_machine.py  test_util.py  test_values.py
ceam_tests/framework/test_risks/: conftest.py  test_risk_deletion_and_rr.py
ceam_tests/test_config_tree/: test_basic_functionality.py  test_ingestion.py
ceam_tests/test_gbd_data/: test_gbd_ms_auxiliary_functions.py  test_gbd_ms_functions.py
ceam_tests/test_modules/: test_blood_pressure.py  test_chronic_condition.py  test_disease.py  test_healthcare_access_module.py  test_module_registry.py  test_module_registry_old.py  test_opportunistic_screening.py  test_smoking.py
configurations/: basic_disease.json  hello_world.json  opportunistic_sbp_screening.json
docs/: Dockerfile  Makefile  conf.py  index.rst  make.bat  nitpick-exceptions  requirements-doc.txt  zero_order_interp.ipynb
docs/ceam/: index.rst
docs/ceam/framework/: event.rst  index.rst  lookup.rst  population.rst  values.rst
docs/source/: _lifecyle.rst  api_reference.rst  components.rst  conf.py  configuration.rst  contributing.rst  core_concepts.rst  engine.rst  event.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  interface.rst  lookup.rst  metrics.rst  plugins.rst  population.rst  randomness.rst  results_writer.rst  state_machine.rst  test_util.rst  time.rst  tutorials.rst  util.rst  values.rst
docs/source/api_reference/: component.rst  config_tree.rst  exceptions.rst  framework.rst  index.rst  interface.rst  interpolation.rst  manager.rst  testing_utilities.rst
docs/source/concepts/: builder.rst  component_manager.rst  components.rst  configuration.rst  crn.rst  (+14 more)
docs/tutorials/: 0_Setup.rst  1_Life.rst  2_Death.rst  3_The_Part_In_Between.rst  4_Things_Get_Better.rst  5_Event_Planning.rst  6_Internal_Consumption.rst  index.rst
docs/vivarium/: index.rst
documentation/: dependency_module_sort_testing_slide.txt
examples/: disease.py  hello_world.py  level_3.py  mediation_example.py  population.py  risk.py  simple_ihd.py
experiment_runners/: level_3.py  level_3_scalarized.py  opportunistic_screening.py
modules/: blood_pressure.py  healthcare_access.py  hemorrhagic_stroke.py  ihd.py  metrics.py
src/vivarium/: __about__.py  __init__.py  component.py  config_tree.py  exceptions.py  interpolation.py  manager.py  test_util.py  testing_utilities.py  types.py
tests/: __init__.py  bamboo_test_runner.sh  conftest.py  helper_components.py  helpers.py  test_engine.py  test_events.py  test_interpolation.py  test_module_registery.py  test_test_util.py  test_util.py
tests/config_tree/: test_basic_functionality.py  test_ingestion.py
tests/examples/: test_boids_model.py  test_disease_model.py
tests/framework/: test_components.py  test_configuration.py  test_dependency.py  test_engine.py  test_event.py  test_lifecycle.py  test_lookup.py  test_plugins.py  test_population.py  test_randomness.py  test_randomness_index_map.py  test_resource.py  test_state_machine.py  test_time.py  test_util.py  test_utilities.py  test_values.py
tests/interface/: test_cli.py  test_config.yaml  test_interactive.py  test_utilities.py
tests/test_config_tree/: test_basic_functionality.py  test_ingestion.py
tests/test_data/: artifact.hdf  bad_model_specification.txt  mock_model_specification.yaml  mock_model_specification.yml  mock_user_config.yaml  mock_user_config.yml
tests/test_modules/: test_chronic_condition.py  test_module_registery.py  test_module_registry.py
tutorials/: 0_Setup.md  1_Life.md  2_Death.md
vivarium/: __init__.py  config_tree.py  interpolation.py  test_util.py
vivarium/configuration/: __init__.py  utilities.py
vivarium/framework/: builder.py  celery_tasks.py  components.py  configuration.py  data.py  dataset.py  engine.py  event.py  lookup.py  metrics.py  plugins.py  population.py  randomness.py  results_writer.py  state_machine.py  time.py  util.py  values.py
vivarium/interface/: cli.py  config_parser.py  interactive.py  testing.py  utilities.py
(+275 files in other folders)
