[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/"]

[tool.coverage.run]
source = ["vivarium"]

[tool.coverage.report]
show_missing = true

[tool.black]
line_length = 94
exclude = '''.*examples.*'''

[tool.isort]
line_length = 94
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent, see https://pypi.org/project/isort/
skip_glob = ["*/examples/*", "**/examples/*"]

[tool.mypy]
# This is the global mypy configuration.
strict = true  # See all the enabled flags `mypy --help | grep -A 10 'Strict mode'`
disallow_any_unimported = false
implicit_reexport = true
exclude = [
    'build',
    # Files below here should have their errors fixed and then be removed from this list
    # You will need to remove the mypy: ignore-errors comment from the file heading as well
    'docs/source/conf.py',
    'setup.py',
    'src/vivarium/examples/disease_model/__init__.py',
    'src/vivarium/examples/disease_model/disease.py',
    'src/vivarium/examples/disease_model/intervention.py',
    'src/vivarium/examples/disease_model/mortality.py',
    'src/vivarium/examples/disease_model/observer.py',
    'src/vivarium/examples/disease_model/population.py',
    'src/vivarium/examples/disease_model/risk.py',
    'src/vivarium/interface/cli.py',
    'src/vivarium/testing_utilities.py',
    'tests/examples/test_disease_model.py',
    'tests/framework/results/test_context.py',
    'tests/framework/results/test_interface.py',
    'tests/framework/results/test_manager.py',
    'tests/framework/results/test_observation.py',
    'tests/framework/results/test_observer.py',
    'tests/framework/results/test_stratification.py',
    'tests/framework/test_configuration.py',
    'tests/framework/test_engine.py',
    'tests/framework/test_event.py',
    'tests/framework/test_lifecycle.py',
    'tests/framework/test_plugins.py',
    'tests/framework/test_values.py',
    'tests/helpers.py',
    'tests/interface/test_cli.py',
    'tests/interface/test_utilities.py',
]

disable_error_code = []

# handle mypy errors when 3rd party packages are not typed.
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "ipywidgets.*",
    "Ipython.*",
    "dill",
    "tables.*"
]
ignore_missing_imports = true